# Seele

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Culling.md  OPTIMIZATIONS.md  README.md  Regex.txt  Seele.natvis  WRITEUP.md  benchmark.py  build  cmake-variants.json  cpp.hint  plots.py  slangdconfig.json  test.glsl  test.py  vcpkg.json  vkvia.html
src/Engine/: CMakeLists.txt  Concepts.h  EngineTypes.h  Game.h  MinimalEngine.cpp  MinimalEngine.h  ThreadPool.cpp  ThreadPool.h  main.cpp
src/Engine/Actor/: Actor.cpp  Actor.h  CMakeLists.txt  CameraActor.cpp  CameraActor.h  DirectionalLightActor.cpp  DirectionalLightActor.h  Entity.cpp  Entity.h  PointLightActor.cpp  PointLightActor.h  StaticMeshActor.cpp  StaticMeshActor.h
src/Engine/Arch/: CMakeLists.txt
src/Engine/Asset/: Asset.cpp  Asset.h  AssetRegistry.cpp  AssetRegistry.h  CMakeLists.txt  EnvironmentMapAsset.cpp  EnvironmentMapAsset.h  FileAsset.cpp  FileAsset.h  FontAsset.cpp  FontAsset.h  FontLoader.cpp  FontLoader.h  LevelAsset.cpp  LevelAsset.h  MaterialAsset.cpp  MaterialAsset.h  MaterialInstanceAsset.cpp  MaterialInstanceAsset.h  MaterialLoader.cpp  MaterialLoader.h  MeshAsset.cpp  MeshAsset.h  MeshLoader.cpp  MeshLoader.h  SVGAsset.cpp  SVGAsset.h  TextureAsset.cpp  TextureAsset.h  TextureLoader.cpp  TextureLoader.h
src/Engine/Component/: AABB.h  CMakeLists.txt  Camera.cpp  Camera.h  Collider.cpp  Collider.h  Component.h  DirectionalLight.h  KeyboardInput.h  Mesh.h  PointLight.h  RigidBody.h  ShapeBase.cpp  ShapeBase.h  Skybox.h  StaticMesh.h  TerrainTile.h  Transform.cpp  Transform.h  WaterTile.h
src/Engine/Containers/: Array.h  Array.natvis  CMakeLists.txt  List.h  Map.h  MemoryResource.cpp  MemoryResource.h  Pair.h  RingBuffer.h  Set.h  Tree.h
src/Engine/Fibers/: CMakeLists.txt  Fibers.cpp  Fibers.h  JobQueue.cpp  JobQueue.h
src/Engine/Graphics/: Buffer.cpp  Buffer.h  CMakeLists.txt  Command.cpp  Command.h  DebugVertex.h  Descriptor.cpp  Descriptor.h  Enums.cpp  Enums.h  ForwardPlusRenderPath.cpp  ForwardPlusRenderPath.h  Graphics.cpp  Graphics.h  GraphicsEnums.cpp  GraphicsEnums.h  GraphicsInitializer.h  GraphicsResources.cpp  GraphicsResources.h  IndexBufferTopologyData.h  Initializer.cpp  Initializer.h  Mesh.cpp  Mesh.h  MeshBatch.cpp  MeshBatch.h  MeshData.h  Meshlet.cpp  Meshlet.h  MeshletTopologyData.cpp  MeshletTopologyData.h  Pipeline.cpp  Pipeline.h  Query.cpp  Query.h  RayTracing.cpp  RayTracing.h  RenderCore.cpp  RenderCore.h  RenderMaterial.cpp  (+35 more)
src/Engine/Graphics/CBT/: CBT.cpp  CBT.h  CMakeLists.txt
src/Engine/Graphics/Metal/: Buffer.h  Buffer.mm  CMakeLists.txt  Command.h  Command.mm  Descriptor.h  Descriptor.mm  Enums.h  Enums.mm  Graphics.cpp  Graphics.h  Graphics.mm  Pipeline.h  Pipeline.mm  PipelineCache.h  PipelineCache.mm  Query.h  Query.mm  RenderPass.h  RenderPass.mm  Resources.h  Resources.mm  Shader.h  Shader.mm  Texture.h  Texture.mm  Window.h  Window.mm
src/Engine/Graphics/RenderPass/: BasePass.cpp  BasePass.h  CMakeLists.txt  CachedDepthPass.cpp  CachedDepthPass.h  DebugPass.cpp  DebugPass.h  DepthCullingPass.cpp  DepthCullingPass.h  DepthPrepass.cpp  DepthPrepass.h  LightCullingPass.cpp  LightCullingPass.h  MeshProcessor.cpp  MeshProcessor.h  RayTracingPass.cpp  RayTracingPass.h  RenderGraph.cpp  RenderGraph.h  RenderGraphResources.cpp  RenderGraphResources.h  RenderPass.cpp  RenderPass.h  ShadowPass.cpp  ShadowPass.h  SkyboxRenderPass.cpp  SkyboxRenderPass.h  StaticBasePass.cpp  StaticBasePass.h  StaticDepthPrepass.cpp  StaticDepthPrepass.h  TerrainRenderer.cpp  TerrainRenderer.h  TextPass.cpp  TextPass.h  ToneMappingPass.cpp  (+9 more)
src/Engine/Material/: BRDF.cpp  BRDF.h  CMakeLists.txt  Material.cpp  Material.h  MaterialAsset.cpp  MaterialAsset.h  MaterialInstance.cpp  MaterialInstance.h  MaterialInterface.cpp  MaterialInterface.h  ShaderExpression.cpp  ShaderExpression.h
src/Engine/Math/: AABB.h  CMakeLists.txt  Math.h  Matrix.h  MemCRC.h  Transform.cpp  Transform.h  Vector.cpp  Vector.h
src/Engine/Physics/: BVH.cpp  BVH.h  CMakeLists.txt  CollisionSystem.cpp  CollisionSystem.h  PhysicsSystem.cpp  PhysicsSystem.h
src/Engine/Platform/: CMakeLists.txt
src/Engine/Scene/: CMakeLists.txt  EventManager.h  LightEnvironment.cpp  LightEnvironment.h  Scene.cpp  Scene.h  SceneUpdater.cpp  SceneUpdater.h  Util.h
src/Engine/Serialization/: ArchiveBuffer.cpp  ArchiveBuffer.h  CMakeLists.txt  Serialization.h
src/Engine/System/: CMakeLists.txt  CameraUpdater.cpp  CameraUpdater.h  ComponentSystem.h  Executor.h  KeyboardInput.cpp  KeyboardInput.h  LightGather.cpp  LightGather.h  MeshUpdater.cpp  MeshUpdater.h  SystemBase.h  SystemGraph.cpp  SystemGraph.h
src/Engine/UI/: Attributes.h  CMakeLists.txt  Element.cpp  Element.h  HorizontalLayout.cpp  HorizontalLayout.h  Layout.cpp  Layout.h  RenderHierarchy.cpp  RenderHierarchy.h  System.cpp  System.h  UIComponent.h  UIRenderPath.h  VerticalLayout.cpp  VerticalLayout.h
src/Engine/Window/: CMakeLists.txt  Frame.h  GameView.cpp  GameView.h  InspectorView.cpp  InspectorView.h  RenderPath.cpp  RenderPath.h  SceneRenderPath.cpp  SceneRenderPath.h  SceneView.cpp  SceneView.h  View.cpp  View.h  Window.cpp  Window.h  WindowManager.cpp  WindowManager.h
test/: CMakeLists.txt
test/Engine/: CMakeLists.txt  EngineTest.cpp  EngineTest.h  ThreadPool.cpp
test/Engine/Containers/: Array.cpp  CMakeLists.txt  List.cpp  Map.cpp
test/Engine/Fibers/: CMakeLists.txt  Fibers.cpp
test/Engine/Graphics/: CMakeLists.txt  GraphicsResources.cpp
test/Engine/Math/: CMakeLists.txt  Vector.cpp
test/Engine/Serialization/: ArchiveBuffer.cpp  CMakeLists.txt
tests/: CMakeLists.txt
tests/Engine/: CMakeLists.txt  EngineTest.h  MinimalEngine.cpp  ThreadPool.cpp
tests/Engine/Containers/: Array.cpp  CMakeLists.txt  List.cpp  Map.cpp
tests/Engine/Graphics/: CMakeLists.txt  GraphicsResources.cpp
tests/Engine/Math/: CMakeLists.txt  Vector.cpp
tests/Engine/Serialization/: ArchiveBuffer.cpp  CMakeLists.txt
tests/Engine/System/: CMakeLists.txt  ComponentSystem.cpp
tests/Engine/UI/: Element.cpp
(+284 files in other folders)
