target_sources(Engine
    PRIVATE
        Buffer.h
        Buffer.cpp
        DebugVertex.h
        Descriptor.h
        Descriptor.cpp
        Enums.h
        Enums.cpp
        Graphics.h
        Graphics.cpp
        Initializer.h
        Initializer.cpp
        Mesh.h
        Mesh.cpp
        RenderTarget.h
        RenderTarget.cpp
        Resources.h
        Resources.cpp
        Shader.h
        Shader.cpp
        StaticMeshVertexData.h
        StaticMeshVertexData.cpp
        Texture.h
        Texture.cpp
        VertexData.h
        VertexData.cpp)

target_sources(Engine
    PUBLIC FILE_SET HEADERS
        FILES
            Buffer.h
            DebugVertex.h
            Descriptor.h
            Graphics.h
            Initializer.h
            Mesh.h
            RenderTarget.h
            Resources.h
            Shader.h
            StaticMeshVertexData.h
            Texture.h
            VertexData.h)

add_subdirectory(RenderPass/)
add_subdirectory(Vulkan/)