target_sources(SeeleEngine
    PRIVATE
        HorizontalLayout.h
        HorizontalLayout.cpp
        Layout.h
        Layout.cpp
        RenderHierarchy.h
        RenderHierarchy.cpp
        System.h
        System.cpp
        VerticalLayout.h
        VerticalLayout.cpp)

add_subdirectory(Elements/)